# cpp-plugins-in

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.en.md  README.md  vcpkg.json
3rd/include/dllplugins/: dlload.cpp  dlload.h  dllobject.h  register.cpp  register.h
3rd/include/utils/: logger.h  utils.h
demo/: CMakeLists.txt
demo/cli11/: CMakeLists.txt  cli11.h  main.cpp
demo/cli11/subcommand/: subcommand.cpp  subcommand.h
demo/dllopen/: CMakeLists.txt
